# ease-of-use-scripts

./: README.md  cqc.py  pyproject.toml  setup_new_environment.py
.circleci/: config.yml
ease_of_use_scripts/: __init__.py  cqc.py  run_pytest.py  setup_new_environment.py
template_jfrog_pypi_package/: settings.py  utils.py
