[project]
name = "ease-of-use-scripts"
version = "0.0.1"
description = ""
requires-python = ">=3.8,<4.0.0"
dependencies = [
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cqc = "cqc:main"
setup = "setup_new_environment:main"